# go-backend/handlers/editing_session_handler.go
@@ -41,6 +41,22 @@ func CreateEditingSession(c *fiber.Ctx) error {
 		})
 	}
 
+	details := make([]string, 0)
+	_, err = models.GetUserById(editingSession.UserId)
+	if err != nil {
+		details = append(details, "User not found")
+	}
+	_, err = models.GetDocumentById(editingSession.DocumentId)
+	if err != nil {
+		details = append(details, "Document not found")
+	}
+
+	if len(details) > 0 {
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"details": details,
+		})
+	}
+
 	models.MockedEditingSessionsTable = append(models.MockedEditingSessionsTable,
 		&editingSession)
 
@@ -52,10 +68,10 @@ func CreateEditingSession(c *fiber.Ctx) error {
 // @Description Write bytes in a EditingSession in its current position.
 // @Tags EditingSessions
 // @Accept plain
-// // @Produce json
+// @Produce json
 // @Param user_id path int true "User Id"
 // @Param document_id path int true "Document Id"
-// // @Success 200 {object} models.EditingSession
+// @Success 200 {object} models.EditingSession
 // @Failure 400
 // @Router /editing-sessions/{user_id}/{document_id} [post]
 func WriteInEditingSession(c *fiber.Ctx) error {
@@ -96,4 +112,64 @@ func WriteInEditingSession(c *fiber.Ctx) error {
 	}
 
 	return c.SendStatus(fiber.StatusOK)
+}
+
+// Update the activity status or current position of an EditingSession.
+// @Summary Update an EditingSession.
+// @Description Update the activity status or current position of an EditingSession.
+// @Tags EditingSessions
+// @Accept json
+// @Produce json
+// @Param user_id path int true "User Id"
+// @Param document_id path int true "Document Id"
+// @Param editing_session body models.EditingSession true "EditingSession"
+// @Success 200 {object} models.EditingSession
+// @Failure 400
+// @Router /editing-sessions/{user_id}/{document_id} [put]
+func UpdateEditingSession(c *fiber.Ctx) error {
+	errorDetails := []string{}
+
+	userId, err := c.ParamsInt("user_id")
+	if err != nil {
+		errorDetails = append(
+			errorDetails,
+			"invalid type: id of User should be an integer",
+		)
+	}
+	documentId, err := c.ParamsInt("document_id")
+	if err != nil {
+		errorDetails = append(
+			errorDetails,
+			"invalid type: id of Document should be an integer",
+		)
+	}
+
+	if len(errorDetails) != 0 {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"details": errorDetails,
+		})
+	}
+
+	editingSession, err := models.GetEditingSessionByUserIdAndDocumentId(userId,
+		documentId)
+
+	if err != nil {
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"detail": err.Error(),
+		})
+	}
+
+	var newData models.EditingSession
+	err = c.BodyParser(&newData)
+	if err != nil {
+		log.Print(err)
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"detail": "invalid body input data",
+		})
+	}
+
+	editingSession.CurrentPosition = newData.CurrentPosition
+	editingSession.IsEditingActive = newData.IsEditingActive
+
+	return c.Status(fiber.StatusOK).JSON(editingSession)
 }
